# streamingPipeline

./: CMakeLists.txt  README.md  captureFrames.py  compressMeshPC.py  eval.py  extractMeshPC.py  framesToVideoSSIM.py  gatherData.py  mergeBin.py  mergeMeshPC.py  render.py  runAllScripts.py  settings.txt  trvl.py
analysisData/: frame_0.glb  frame_0.gltf  frame_0_vx_0.010000.mtl  frame_0_vx_0.015000.mtl  frame_0_vx_0.020000.mtl  frame_0_vx_0.050000.mtl  frame_0_vx_0.090000.mtl  frame_1.glb  frame_1.gltf  frame_10.glb  frame_10.gltf  frame_11.glb  frame_11.gltf  frame_12.glb  frame_12.gltf  frame_13.glb  frame_13.gltf  frame_14.glb  frame_14.gltf  frame_15.glb  frame_15.gltf  frame_16.glb  frame_16.gltf  frame_17.glb  frame_17.gltf  frame_18.glb  frame_18.gltf  frame_19.glb  frame_19.gltf  frame_2.glb  frame_2.gltf  frame_20.glb  frame_20.gltf  frame_21.glb  frame_21.gltf  frame_22.glb  frame_23.glb  frame_24.glb  frame_25.glb  frame_26.glb  (+22 more)
camera_calib_files/: kinect_000248792012.txt
include/: camera_alignment.hpp  circularBuffer.hpp  cv_convert_util.hpp  kinect_capture.hpp  multi_kinect_capture.hpp  texture_mapping.hpp  trvl.h  util.hpp
render/: extrinsic_0.txt
src/: camera_alignment.cpp  client.cpp  example.cpp  extractMesh.cpp  extractPC.cpp  kinect_capture.cpp  mergeBin.cpp  mergeMesh.cpp  mergePC.cpp  multi_kinect_capture.cpp  paper.cpp  reconstruction.cpp  texture_mapping.cpp  trvl.cpp  trvlTest copy.cpp  trvlTest.cpp  util.cpp
